--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,11 +27,11 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  # cached_network_image: ^3.2.3
   cloud_firestore: ^4.3.1
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.2.4
   firebase_core: ^2.4.1
+  firebase_remote_config: ^3.0.9
   flutter:
     sdk: flutter
   fluttertoast: ^8.1.2
